crate/lib/sinex-primitives/tests/proof_compile_fail/missing_checkpoint.stderr
error[E0599]: no method named `build` found for struct `RuntimeUnitDescriptorBuilder<HasOutput, HasPrivacy, HasMaterial, MissingCheckpoint>` in the current scope
  --> tests/proof_compile_fail/missing_checkpoint.rs:13:6
   |
 4 |       let _ = RuntimeUnitDescriptor::builder(
   |  _____________-
 5 | |         subject_ref!("runtime_unit:test.missing_checkpoint"),
 6 | |         "test.missing_checkpoint",
 7 | |         "test",
...  |
12 | |     .material_policy("canonical_json_lines")
13 | |     .build();
   | |     -^^^^^ method not found in `RuntimeUnitDescriptorBuilder<HasOutput, HasPrivacy, HasMaterial, MissingCheckpoint>`
   | |_____|
   |
   |
   = note: the method was found for
           - `RuntimeUnitDescriptorBuilder<HasOutput, HasPrivacy, HasMaterial, HasCheckpoint>`
